--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="la-note-enchantée.html">
+                <a href="la-note-enchantee.html">
                     <article class="article-cards">
                         <div class="card-img">
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
