--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -34,7 +34,7 @@
                     <p class="cards-subtitle">Aux zeste d'orange</p>
                 </div>
                 <span class="price">25€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -42,7 +42,7 @@
                     <p class="cards-subtitle">Carotte, panais, topinambour</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -50,7 +50,7 @@
                     <p class="cards-subtitle">Revisitée</p>
                 </div>
                 <span class="price">20€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-plats">
@@ -61,7 +61,7 @@
                     <p class="cards-subtitle">Accompagnées d'une purée de panais</p>
                 </div>
                 <span class="price">40€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -69,7 +69,7 @@
                     <p class="cards-subtitle">Et parmentier de pommes de terre</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -77,7 +77,7 @@
                     <p class="cards-subtitle">Sur son lit de gnocchis aux légumes</p>
                 </div>
                 <span class="price">44€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-desserts">
@@ -88,7 +88,7 @@
                         <p class="cards-subtitle">Et purée de noisettes</p>
                     </div>
                     <span class="price">18€</span> 
-                    <i class="fa-solid fa-circle-check transition"></i>
+                    <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -96,7 +96,7 @@
                     <p class="cards-subtitle">Revisité</p>
                 </div>
                 <span class="price">22€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -104,7 +104,7 @@
                     <p class="cards-subtitle">Myrtilles et pâte d'amande</p>
                 </div>
                 <span class="price">23€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <a class="order-button" href="#">Commnader</a>
         </section>      
