--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -34,7 +34,7 @@
                     <p class="cards-subtitle">Accompagnées de leur crème à la truffe</p>
                 </div>
                 <span class="price">25€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -42,7 +42,7 @@
                     <p class="cards-subtitle">Sur blini à la farine de blé noir</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -50,7 +50,7 @@
                     <p class="cards-subtitle">Marinés aux zestes d'orange</p>
                 </div>
                 <span class="price">20€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -58,7 +58,7 @@
                     <p class="cards-subtitle">Confiture de figue et pain toasté</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-plats">
@@ -69,7 +69,7 @@
                     <p class="cards-subtitle">Sur lit de purée de céleri-rave</p>
                 </div>
                 <span class="price">40€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -77,7 +77,7 @@
                     <p class="cards-subtitle">Purée de patate douce</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -85,7 +85,7 @@
                     <p class="cards-subtitle">Et riz sauvage aux zestes de citron</p>
                 </div>
                 <span class="price">45€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-desserts">
@@ -96,7 +96,7 @@
                         <p class="cards-subtitle">Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <span class="price">18€</span>
-                    <i class="fa-solid fa-circle-check transition"></i>
+                    <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                     <div class="articles-ellipsis">
@@ -104,7 +104,7 @@
                         <p class="cards-subtitle">Avec son coulis de citron</p>
                     </div>
                     <span class="price">22€</span>
-                    <i class="fa-solid fa-circle-check transition"></i>
+                    <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -112,7 +112,7 @@
                     <p class="cards-subtitle">Dèstructurée</p>
                 </div>
                 <span class="price">23€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <a class="order-button" href="#">Commnader</a>
         </section>
