--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -34,7 +34,7 @@
                     <p class="cards-subtitle">Au piment d'espelette</p>
                 </div>
                 <span class="price">25€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -42,7 +42,7 @@
                     <p class="cards-subtitle">Et ses copeaux de truffe noire</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -50,7 +50,7 @@
                     <p class="cards-subtitle">Assaisonné à la truffe sur lit de caviar</p>
                 </div>
                 <span class="price">20€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-plats">
@@ -61,7 +61,7 @@
                     <p class="cards-subtitle">Accompagné de sa ribambelle de legumes</p>
                 </div>
                 <span class="price">40€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -69,7 +69,7 @@
                     <p class="cards-subtitle">A la truffe noire sur sa purée de panais</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -77,7 +77,7 @@
                     <p class="cards-subtitle">Au agrumes</p>
                 </div>
                 <span class="price">44€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-desserts">
@@ -88,7 +88,7 @@
                     <p class="cards-subtitle">Revisité</p>
                 </div>
                 <span class="price">18€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -96,7 +96,7 @@
                     <p class="cards-subtitle">Et glace à la vanille de Madagascar</p>
                 </div>
                 <span class="price">22€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -104,7 +104,7 @@
                     <p class="cards-subtitle">Au piment d'Espelette et à la truffe noire</p>
                 </div>
                 <span class="price">23€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <a class="order-button" href="#">Commnader</a>
         </section>
