--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -34,7 +34,7 @@
                     <p class="cards-subtitle">Assaisonné au yuzu</p>
                 </div>
                 <span class="price">25€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -42,7 +42,7 @@
                     <p class="cards-subtitle">Et sa farandole de légumes</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -50,7 +50,7 @@
                     <p class="cards-subtitle">Et sa crème de truffe</p>
                 </div>
                 <span class="price">40€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-plats">
@@ -61,7 +61,7 @@
                     <p class="cards-subtitle">Et sa crème de truffe</p>
                 </div>
                 <span class="price">40€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -69,7 +69,7 @@
                     <p class="cards-subtitle">Et ses legumes de saison</p>
                 </div>
                 <span class="price">35€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -77,7 +77,7 @@
                     <p class="cards-subtitle">Et sa purée de panais</p>
                 </div>
                 <span class="price">44€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
         </section>
         <section class="section-desserts">
@@ -88,7 +88,7 @@
                         <p class="cards-subtitle">Du chef</p>
                     </div>
                     <span class="price">18€</span>
-                    <i class="fa-solid fa-circle-check transition"></i>
+                    <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -96,7 +96,7 @@
                     <p class="cards-subtitle">Revisitée</p>
                 </div>
                 <span class="price">22€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
@@ -104,7 +104,7 @@
                     <p class="cards-subtitle">A la noisette</p>
                 </div>
                 <span class="price">23€</span>
-                <i class="fa-solid fa-circle-check transition"></i>
+                <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <a class="order-button" href="#">Commnader</a>
         </section>        
