--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <li class="footer-icons">
                     <i class="fa-solid fa-handshake-angle"></i><a class="link" href="#">Devenir partenaire</a>
                 </li>
-                <li><a class="link" href="#">Mentions légales</a></li>
+                <li><a class="link" href="#">Mentions légales</a></li> <!-- class=link à verifier-->
                 <li><a class="link" href="#">Contact</a></li>
             </ul>
         </nav>
