--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     <main>
         <section class="section-restaurants" id="ANCRE-RESTAURANTS">
             <h2 class="h2-restaurants">Restaurants</h2>
+            <div class="overlay-loading">
+                <i class="fa-solid fa-arrow-rotate-right"></i>  <!--à verifier 25 06 2024-->
+            </div>
             <div class="restaurant-cards">
                 <a href="la-palette-du-gout.html">
                     <article class="article-cards">
