--- a/index.html
+++ b/index.html
@@ -56,27 +56,33 @@
             <div class="restaurant-cards">
                 <a href="la-palette-du-gout.html">
                     <article class="article-cards">
-                        <div class="card-img">
+                        <div>
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant La palette du goût">
                             <div class="logo-nouveau">Nouveau</div>
                         </div>
                         <div class="card-txt">
                             <h3 class="card-title">La palette du goût</h3>
                             <p class="card-subtitle">Ménilmontant</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div>
+                                <i class="fa-regular fa-heart fa-heart-visible"></i>
+                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                            </div>
                         </div>
                     </article>
                 </a>
                 <a href="la-note-enchantee.html">
                     <article class="article-cards">
-                        <div class="card-img">
+                        <div>
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
                             <div class="logo-nouveau">Nouveau</div>
                         </div>
                         <div class="card-txt">
                             <h3 class="card-title">La note enchantée</h3>
                             <p class="card-subtitle">Charonne</p>
-                            <i class="fa-regular fa-heart"></i>      
+                            <div>
+                                <i class="fa-regular fa-heart fa-heart-visible"></i>
+                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                            </div>      
                         </div>
                     </article>
                 </a>  
@@ -86,7 +92,10 @@
                         <div class="card-txt">
                             <h3 class="card-title">A la française</h3>
                             <p class="card-subtitle">Cité Rouge</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div>
+                                <i class="fa-regular fa-heart fa-heart-visible"></i>
+                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                            </div>
                         </div>
                     </article>
                 </a>
@@ -96,7 +105,10 @@
                         <div class="card-txt">
                             <h3 class="card-title">Le délice des sens</h3>
                             <p class="card-subtitle">Folie-Méricourt</p>
-                            <i class="fa-regular fa-heart"></i>
+                            <div>
+                                <i class="fa-regular fa-heart fa-heart-visible"></i>
+                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                            </div>
                         </div>
                     </article>
                 </a>
