add class: main-section for le-delice-des-sens.html and la-note_enchantee.html

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -24,7 +24,10 @@
     <main class="main-section">
         <div class="menu-h2-and-heart">
             <h2>la note enchantée</h2>
-            <i class="fa-regular fa-heart"></i>
+            <div cl>
+                <i class="fa-regular fa-heart fa-heart-one"></i>
+                <i class="fa-regular fa-heart fa-heart-two"></i>
+            </div>
         </div>
         <section class="section-entrees">
             <h3 class="menu-title-cards">ENTREES</h3>
