--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -21,7 +21,7 @@
         <h1>ohmyfood</h1>
         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
     </header>
-    <main>
+    <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>le délice des sens</h2>
             <i class="fa-regular fa-heart"></i>
