add class: main-menu for a-la-francaise.html; la-note_enchantee.html la-palette-du-gout.html

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -21,7 +21,7 @@
         <h1>ohmyfood</h1>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
     </header>
-    <main class="main-section">
+    <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>la palette du goût</h2>
             <i class="fa-regular fa-heart"></i>
