--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -21,7 +21,7 @@
         <h1>ohmyfood</h1>
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
     </header>
-    <main class="main-section">
+    <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>A la française</h2>
             <i class="fa-regular fa-heart"></i>
