--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -21,7 +21,7 @@
         <h1>ohmyfood</h1>
         <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
     </header>
-    <main class="main-section">
+    <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>la note enchantée</h2>
             <div cl>
