delete class empty la-note_enchantee.html

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -24,9 +24,9 @@
     <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>la note enchantée</h2>
-            <div cl>
-                <i class="fa-regular fa-heart fa-heart-one"></i>
-                <i class="fa-regular fa-heart fa-heart-two"></i>
+            <div>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-heart"></i>
             </div>
         </div>
         <section class="section-entrees">
