--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <i class="fa-solid fa-handshake-angle"></i><a class="link" href="#">Devenir partenaire</a>
                 </li>
                 <li><a class="link" href="#">Mentions légales</a></li> <!-- class=link à verifier-->
-                <li><a class="link" href="#">Contact</a></li>
+                <li><a class="link" href="mailto:email@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </footer>
