--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -120,7 +120,7 @@
                     <i class="fa-solid fa-handshake-angle margin-handshake"></i><a href="#">Devenir partenaire</a>
                 </li>
                 <li><a href="#">Mentions légales</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="mailto:email@gmail.com">Contact</a></li>
             </ul>
         </nav>
     </footer>
