menu html pages add class and _menu-restaurants.scss fa-heart @keyframes

--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -24,7 +24,10 @@
     <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>la palette du goût</h2>
-            <i class="fa-regular fa-heart"></i>
+            <div class="fa-heart-menu">
+                <i class="fa-regular fa-heart fa-heart-visible"></i>
+                <i class="fa-regular fa-heart fa-heart-masked"></i>
+            </div>
         </div>
         <section class="section-entrees">
             <h3 class="menu-title-cards">ENTREES</h3>
