--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -24,9 +24,9 @@
     <main class="main-menu">
         <div class="menu-h2-and-heart">
             <h2>la note enchantée</h2>
-            <div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-heart"></i>
+            <div class="fa-heart-menu">
+                <i class="fa-regular fa-heart fa-heart-visible"></i>
+                <i class="fa-regular fa-heart fa-heart-masked"></i>
             </div>
         </div>
         <section class="section-entrees">
