pages menu orthographe correction

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -34,7 +34,7 @@
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3>Tartare de poulpe acidulé</h3>
-                    <p class="cards-subtitle">Aux zeste d'orange</p>
+                    <p class="cards-subtitle">Aux zestes d'orange</p>
                 </div>
                 <span class="price">25€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
