--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -84,7 +84,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Mijoté de queue de boeuf</h3>
+                    <h3>Mijoté de queue de bœuf</h3>
                     <p class="cards-subtitle">Et riz sauvage aux zestes de citron</p>
                 </div>
                 <span class="price">45€</span>
@@ -111,8 +111,8 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Tatre au citron meringée</h3>
-                    <p class="cards-subtitle">Dèstructurée</p>
+                    <h3>Tarte au citron meringée</h3>
+                    <p class="cards-subtitle">Déstructurée</p>
                 </div>
                 <span class="price">23€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
