--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -34,7 +34,7 @@
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3>Fricassée d'escargots</h3>
-                    <p class="cards-subtitle">Au piment d'espelette</p>
+                    <p class="cards-subtitle">Au piment d'Espelette</p>
                 </div>
                 <span class="price">25€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
@@ -49,7 +49,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>OEuf au plat</h3>
+                    <h3>Œuf au plat</h3>
                     <p class="cards-subtitle">Assaisonné à la truffe sur lit de caviar</p>
                 </div>
                 <span class="price">20€</span>
@@ -60,7 +60,7 @@
             <h3 class="menu-title-cards">PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Filet de boeuf aux herbes</h3>
+                    <h3>Filet de bœuf aux herbes</h3>
                     <p class="cards-subtitle">Accompagné de sa ribambelle de legumes</p>
                 </div>
                 <span class="price">40€</span>
@@ -68,7 +68,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Parmentier de queue de boeuf</h3>
+                    <h3>Parmentier de queue de bœuf</h3>
                     <p class="cards-subtitle">A la truffe noire sur sa purée de panais</p>
                 </div>
                 <span class="price">35€</span>
@@ -77,7 +77,7 @@
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3>Filet de turbot</h3>
-                    <p class="cards-subtitle">Au agrumes</p>
+                    <p class="cards-subtitle">Aux agrumes</p>
                 </div>
                 <span class="price">44€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
