--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -42,7 +42,7 @@
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3>Bouchée de homard croustillant</h3>
-                    <p class="cards-subtitle">Et sa farandole de légumes</p>
+                    <p class="cards-subtitle">Et sa farandole de petits légumes</p>
                 </div>
                 <span class="price">35€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
@@ -69,14 +69,14 @@
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3>Langouste rôtie</h3>
-                    <p class="cards-subtitle">Et ses legumes de saison</p>
+                    <p class="cards-subtitle">Et ses légumes de saison</p>
                 </div>
                 <span class="price">35€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Côte de boeuf Angus</h3>
+                    <h3>Côte de bœuf Angus</h3>
                     <p class="cards-subtitle">Et sa purée de panais</p>
                 </div>
                 <span class="price">44€</span>
@@ -104,7 +104,7 @@
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3>Tiramisu</h3>
-                    <p class="cards-subtitle">A la noisette</p>
+                    <p class="cards-subtitle">À la noisette</p>
                 </div>
                 <span class="price">23€</span>
                 <i class="fa-solid fa-circle-check checkmark"></i>
