add class at pages menus .html

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -33,7 +33,7 @@
             <h3 class="menu-title-cards">ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Ravioles de foie gras</h3>
+                    <h3 class="menu-title-cards">Ravioles de foie gras</h3>
                     <p class="cards-subtitle">Accompagnées de leur crème à la truffe</p>
                 </div>
                 <span class="price">25€</span>
@@ -41,7 +41,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Caviar osciètre</h3>
+                    <h3 class="menu-title-cards">Caviar osciètre</h3>
                     <p class="cards-subtitle">Sur blini à la farine de blé noir</p>
                 </div>
                 <span class="price">35€</span>
@@ -49,7 +49,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Homard et espuma de potiron</h3>
+                    <h3 class="menu-title-cards">Homard et espuma de potiron</h3>
                     <p class="cards-subtitle">Marinés aux zestes d'orange</p>
                 </div>
                 <span class="price">20€</span>
@@ -57,7 +57,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Foie gras de canard cuit entier</h3>
+                    <h3 class="menu-title-cards">Foie gras de canard cuit entier</h3>
                     <p class="cards-subtitle">Confiture de figue et pain toasté</p>
                 </div>
                 <span class="price">35€</span>
@@ -76,7 +76,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Langoustine poêlée</h3>
+                    <h3 class="menu-title-cards">Langoustine poêlée</h3>
                     <p class="cards-subtitle">Purée de patate douce</p>
                 </div>
                 <span class="price">35€</span>
@@ -84,7 +84,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Mijoté de queue de bœuf</h3>
+                    <h3 class="menu-title-cards">Mijoté de queue de bœuf</h3>
                     <p class="cards-subtitle">Et riz sauvage aux zestes de citron</p>
                 </div>
                 <span class="price">45€</span>
@@ -95,7 +95,7 @@
             <h3 class="menu-title-cards">DESSERTS</h3>
             <article class="background-cards">
                     <div class="articles-ellipsis">
-                        <h3>Macaron noisette et chocolat</h3>
+                        <h3 class="menu-title-cards">Macaron noisette et chocolat</h3>
                         <p class="cards-subtitle">Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <span class="price">18€</span>
@@ -103,7 +103,7 @@
             </article>
             <article class="background-cards">
                     <div class="articles-ellipsis">
-                        <h3>Baba au rum revisité</h3>    
+                        <h3 class="menu-title-cards">Baba au rum revisité</h3>    
                         <p class="cards-subtitle">Avec son coulis de citron</p>
                     </div>
                     <span class="price">22€</span>
@@ -111,7 +111,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Tarte au citron meringée</h3>
+                    <h3 class="menu-title-cards">Tarte au citron meringée</h3>
                     <p class="cards-subtitle">Déstructurée</p>
                 </div>
                 <span class="price">23€</span>
