--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -33,7 +33,7 @@
             <h3 class="menu-title-cards">ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Fricassée d'escargots</h3>
+                    <h3 class="menu-title-cards">Fricassée d'escargots</h3>
                     <p class="cards-subtitle">Au piment d'Espelette</p>
                 </div>
                 <span class="price">25€</span>
@@ -41,7 +41,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Foie gras de canard mi-cuit</h3>
+                    <h3 class="menu-title-cards">Foie gras de canard mi-cuit</h3>
                     <p class="cards-subtitle">Et ses copeaux de truffe noire</p>
                 </div>
                 <span class="price">35€</span>
@@ -49,7 +49,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Œuf au plat</h3>
+                    <h3 class="menu-title-cards">Œuf au plat</h3>
                     <p class="cards-subtitle">Assaisonné à la truffe sur lit de caviar</p>
                 </div>
                 <span class="price">20€</span>
@@ -60,7 +60,7 @@
             <h3 class="menu-title-cards">PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Filet de bœuf aux herbes</h3>
+                    <h3 class="menu-title-cards">Filet de bœuf aux herbes</h3>
                     <p class="cards-subtitle">Accompagné de sa ribambelle de legumes</p>
                 </div>
                 <span class="price">40€</span>
@@ -68,7 +68,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Parmentier de queue de bœuf</h3>
+                    <h3 class="menu-title-cards">Parmentier de queue de bœuf</h3>
                     <p class="cards-subtitle">A la truffe noire sur sa purée de panais</p>
                 </div>
                 <span class="price">35€</span>
@@ -76,7 +76,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Filet de turbot</h3>
+                    <h3 class="menu-title-cards">Filet de turbot</h3>
                     <p class="cards-subtitle">Aux agrumes</p>
                 </div>
                 <span class="price">44€</span>
@@ -87,7 +87,7 @@
             <h3 class="menu-title-cards">DESSERTS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Paris-Brest</h3>
+                    <h3 class="menu-title-cards">Paris-Brest</h3>
                     <p class="cards-subtitle">Revisité</p>
                 </div>
                 <span class="price">18€</span>
@@ -95,7 +95,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Macaron au chocolat d'execption</h3>
+                    <h3 class="menu-title-cards">Macaron au chocolat d'execption</h3>
                     <p class="cards-subtitle">Et glace à la vanille de Madagascar</p>
                 </div>
                 <span class="price">22€</span>
@@ -103,7 +103,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Mousse au chocolat</h3>
+                    <h3 class="menu-title-cards">Mousse au chocolat</h3>
                     <p class="cards-subtitle">Au piment d'Espelette et à la truffe noire</p>
                 </div>
                 <span class="price">23€</span>
