--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -33,7 +33,7 @@
             <h3 class="menu-title-cards">ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Tartare de thon</h3>
+                    <h3 class="menu-title-cards">Tartare de thon</h3>
                     <p class="cards-subtitle">Assaisonné au yuzu</p>
                 </div>
                 <span class="price">25€</span>
@@ -41,7 +41,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Bouchée de homard croustillant</h3>
+                    <h3 class="menu-title-cards">Bouchée de homard croustillant</h3>
                     <p class="cards-subtitle">Et sa farandole de petits légumes</p>
                 </div>
                 <span class="price">35€</span>
@@ -49,7 +49,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Poulet rôti aux herbes de Provence</h3>
+                    <h3 class="menu-title-cards">Poulet rôti aux herbes de Provence</h3>
                     <p class="cards-subtitle">Et sa crème de truffe</p>
                 </div>
                 <span class="price">40€</span>
@@ -60,7 +60,7 @@
             <h3 class="menu-title-cards">PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Poulet rôti aux herbes de Provence</h3>
+                    <h3 class="menu-title-cards">Poulet rôti aux herbes de Provence</h3>
                     <p class="cards-subtitle">Et sa crème de truffe</p>
                 </div>
                 <span class="price">40€</span>
@@ -68,7 +68,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Langouste rôtie</h3>
+                    <h3 class="menu-title-cards">Langouste rôtie</h3>
                     <p class="cards-subtitle">Et ses légumes de saison</p>
                 </div>
                 <span class="price">35€</span>
@@ -76,7 +76,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Côte de bœuf Angus</h3>
+                    <h3 class="menu-title-cards">Côte de bœuf Angus</h3>
                     <p class="cards-subtitle">Et sa purée de panais</p>
                 </div>
                 <span class="price">44€</span>
@@ -87,7 +87,7 @@
             <h3 class="menu-title-cards">DESSERTS</h3>
             <article class="background-cards">
                     <div class="articles-ellipsis">
-                        <h3>Farandole de desserts</h3>
+                        <h3 class="menu-title-cards">Farandole de desserts</h3>
                         <p class="cards-subtitle">Du chef</p>
                     </div>
                     <span class="price">18€</span>
@@ -95,7 +95,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Crème brulée</h3>
+                    <h3 class="menu-title-cards">Crème brulée</h3>
                     <p class="cards-subtitle">Revisitée</p>
                 </div>
                 <span class="price">22€</span>
@@ -103,7 +103,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Tiramisu</h3>
+                    <h3 class="menu-title-cards">Tiramisu</h3>
                     <p class="cards-subtitle">À la noisette</p>
                 </div>
                 <span class="price">23€</span>
