--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -33,7 +33,7 @@
             <h3 class="menu-title-cards">ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Tartare de poulpe acidulé</h3>
+                    <h3 class="menu-title-cards">Tartare de poulpe acidulé</h3>
                     <p class="cards-subtitle">Aux zestes d'orange</p>
                 </div>
                 <span class="price">25€</span>
@@ -41,7 +41,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Velouté de légumes d'antan</h3>
+                    <h3 class="menu-title-cards">Velouté de légumes d'antan</h3>
                     <p class="cards-subtitle">Carotte, panais, topinambour</p>
                 </div>
                 <span class="price">35€</span>
@@ -49,7 +49,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Soupe à l'oignon</h3>
+                    <h3 class="menu-title-cards">Soupe à l'oignon</h3>
                     <p class="cards-subtitle">Revisitée</p>
                 </div>
                 <span class="price">20€</span>
@@ -60,7 +60,7 @@
             <h3 class="menu-title-cards">PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Coquilles Saint-jacques</h3>
+                    <h3 class="menu-title-cards">Coquilles Saint-jacques</h3>
                     <p class="cards-subtitle">Accompagnées d'une purée de panais</p>
                 </div>
                 <span class="price">40€</span>
@@ -68,7 +68,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Magret de canard</h3>
+                    <h3 class="menu-title-cards">Magret de canard</h3>
                     <p class="cards-subtitle">Et parmentier de pommes de terre</p>
                 </div>
                 <span class="price">35€</span>
@@ -76,7 +76,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                    <h3 class="menu-title-cards">Pigeonneau d'Ille-et-Vilaine</h3>
                     <p class="cards-subtitle">Sur son lit de gnocchis aux légumes</p>
                 </div>
                 <span class="price">44€</span>
@@ -87,7 +87,7 @@
             <h3 class="menu-title-cards">DESSERTS</h3>
             <article class="background-cards">
                     <div class="articles-ellipsis">
-                        <h3>Pétales de violettes glacés</h3>
+                        <h3 class="menu-title-cards">Pétales de violettes glacés</h3>
                         <p class="cards-subtitle">Et purée de noisettes</p>
                     </div>
                     <span class="price">18€</span> 
@@ -95,7 +95,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Fondant au chocolat</h3>
+                    <h3 class="menu-title-cards">Fondant au chocolat</h3>
                     <p class="cards-subtitle">Revisité</p>
                 </div>
                 <span class="price">22€</span>
@@ -103,7 +103,7 @@
             </article>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Millefeuille croustillant</h3>
+                    <h3 class="menu-title-cards">Millefeuille croustillant</h3>
                     <p class="cards-subtitle">Myrtilles et pâte d'amande</p>
                 </div>
                 <span class="price">23€</span>
