deletions class at pages menus .html and add _menu-reastaurants.scss: font size changed for h3 menu-title-cards and h3 titles section cards menu

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <section class="section-entrees">
-            <h3 class="menu-title-cards">ENTREES</h3>
+            <h3>ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3 class="menu-title-cards">Ravioles de foie gras</h3>
@@ -65,10 +65,10 @@
             </article>
         </section>
         <section class="section-plats">
-            <h3 class="menu-title-cards">PLATS</h3>
+            <h3>PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
-                    <h3>Noix de coquilles Saint-jacques</h3>
+                    <h3 class="menu-title-cards">Noix de coquilles Saint-jacques</h3>
                     <p class="cards-subtitle">Sur lit de purée de céleri-rave</p>
                 </div>
                 <span class="price">40€</span>
@@ -92,7 +92,7 @@
             </article>
         </section>
         <section class="section-desserts">
-            <h3 class="menu-title-cards">DESSERTS</h3>
+            <h3>DESSERTS</h3>
             <article class="background-cards">
                     <div class="articles-ellipsis">
                         <h3 class="menu-title-cards">Macaron noisette et chocolat</h3>
