--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <section class="section-entrees">
-            <h3 class="menu-title-cards">ENTREES</h3>
+            <h3>ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3 class="menu-title-cards">Fricassée d'escargots</h3>
@@ -57,7 +57,7 @@
             </article>
         </section>
         <section class="section-plats">
-            <h3 class="menu-title-cards">PLATS</h3>
+            <h3>PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3 class="menu-title-cards">Filet de bœuf aux herbes</h3>
@@ -84,7 +84,7 @@
             </article>
         </section>
         <section class="section-desserts">
-            <h3 class="menu-title-cards">DESSERTS</h3>
+            <h3>DESSERTS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3 class="menu-title-cards">Paris-Brest</h3>
