--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <section class="section-entrees">
-            <h3 class="menu-title-cards">ENTREES</h3>
+            <h3>ENTREES</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3 class="menu-title-cards">Tartare de poulpe acidulé</h3>
@@ -57,7 +57,7 @@
             </article>
         </section>
         <section class="section-plats">
-            <h3 class="menu-title-cards">PLATS</h3>
+            <h3>PLATS</h3>
             <article class="background-cards">
                 <div class="articles-ellipsis">
                     <h3 class="menu-title-cards">Coquilles Saint-jacques</h3>
@@ -84,7 +84,7 @@
             </article>
         </section>
         <section class="section-desserts">
-            <h3 class="menu-title-cards">DESSERTS</h3>
+            <h3>DESSERTS</h3>
             <article class="background-cards">
                     <div class="articles-ellipsis">
                         <h3 class="menu-title-cards">Pétales de violettes glacés</h3>
