index.html correction class=search-input type=text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>ohmyfood</h1>
         <form class="header-form">
             <i class="fa-solid fa-location-dot"></i>
-            <input class="search-input" type="texte" value="Paris, Belleville"/>
+            <input class="search-input" type="text" value="Paris, Belleville"/>
         </form>
     </header>
     <section class="section-presentation">
