index.html update

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="section-restaurants" id="ANCRE-RESTAURANTS">
             <h2 class="h2-restaurants">Restaurants</h2>
             <div class="overlay-loading">
-                <i class="fa-solid fa-arrow-rotate-right"></i>  <!--à verifier 25 06 2024-->
+                <i class="fa-solid fa-arrow-rotate-right"></i>
             </div>
             <div class="restaurant-cards">
                 <a href="la-palette-du-gout.html">
@@ -115,7 +115,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer"> <!-- à verifier -->
+    <footer>
         <h2>ohmyfood</h2>
         <nav>
             <ul>
