--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <p class="card-subtitle">Ménilmontant</p>
                             <div>
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
-                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                                <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>
                         </div>
                     </article>
@@ -81,7 +81,7 @@
                             <p class="card-subtitle">Charonne</p>
                             <div>
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
-                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                                <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>      
                         </div>
                     </article>
@@ -94,7 +94,7 @@
                             <p class="card-subtitle">Cité Rouge</p>
                             <div>
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
-                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                                <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>
                         </div>
                     </article>
@@ -107,7 +107,7 @@
                             <p class="card-subtitle">Folie-Méricourt</p>
                             <div>
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
-                                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                                <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>
                         </div>
                     </article>
