--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -26,7 +26,7 @@
             <h2>la palette du goût</h2>
             <div class="fa-heart-menu">
                 <i class="fa-regular fa-heart fa-heart-visible"></i>
-                <i class="fa-regular fa-heart fa-heart-masked"></i>
+                <i class="fa-solid fa-heart fa-heart-masked"></i>
             </div>
         </div>
         <section class="section-entrees">
