la-note-enchantee.html update text

--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -103,7 +103,7 @@
             </article>
             <article class="background-cards">
                     <div class="articles-ellipsis">
-                        <h3 class="menu-title-cards">Baba au rum revisité</h3>    
+                        <h3 class="menu-title-cards">Baba au rhum revisité</h3>    
                         <p class="cards-subtitle">Avec son coulis de citron</p>
                     </div>
                     <span class="price">22€</span>
