--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="card-txt">
                             <h3 class="card-title">La palette du goût</h3>
                             <p class="card-subtitle">Ménilmontant</p>
-                            <div>
+                            <div class="fa-heart-restaurants">
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
                                 <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>
@@ -79,7 +79,7 @@
                         <div class="card-txt">
                             <h3 class="card-title">La note enchantée</h3>
                             <p class="card-subtitle">Charonne</p>
-                            <div>
+                            <div class="fa-heart-restaurants">
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
                                 <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>      
@@ -92,7 +92,7 @@
                         <div class="card-txt">
                             <h3 class="card-title">A la française</h3>
                             <p class="card-subtitle">Cité Rouge</p>
-                            <div>
+                            <div class="fa-heart-restaurants">
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
                                 <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>
@@ -105,7 +105,7 @@
                         <div class="card-txt">
                             <h3 class="card-title">Le délice des sens</h3>
                             <p class="card-subtitle">Folie-Méricourt</p>
-                            <div>
+                            <div class="fa-heart-restaurants">
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
                                 <i class="fa-solid fa-heart fa-heart-masked"></i>
                             </div>
