html pages menu update orthographe

--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -110,7 +110,7 @@
                 <i class="fa-solid fa-circle-check checkmark"></i>
             </article>    
         </section>
-        <a class="order-button" href="#">Commnader</a>        
+        <a class="order-button" href="#">Commander</a>        
     </main>
     <footer>
         <h2>ohmyfood</h2>
