--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -118,7 +118,7 @@
                 <i class="fa-solid fa-circle-check checkmark"></i>
             </article>    
         </section>
-        <a class="order-button" href="#">Commnader</a>
+        <a class="order-button" href="#">Commander</a>
     </main>
     <footer>
         <h2 class="footer-title">ohmyfood</h2>
