--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -23,7 +23,7 @@
     </header>
     <main class="main-menu">
         <div class="menu-h2-and-heart">
-            <h2>A la française</h2>
+            <h2>À la française</h2>
             <div class="fa-heart-menu">
                 <i class="fa-regular fa-heart fa-heart-visible"></i>
                 <i class="fa-solid fa-heart fa-heart-masked"></i>
