index.html correction orthographe

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <article class="article-cards">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <div class="card-txt">
-                            <h3 class="card-title">A la française</h3>
+                            <h3 class="card-title">À la française</h3>
                             <p class="card-subtitle">Cité Rouge</p>
                             <div class="fa-heart-restaurants">
                                 <i class="fa-regular fa-heart fa-heart-visible"></i>
