--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <i class="fa-solid fa-arrow-rotate-right"></i>
             </div>
             <div class="restaurant-cards">
-                <a href="la-palette-du-gout.html">
+                <a href="restaurants/la-palette-du-gout.html">
                     <article class="article-cards">
                         <div>
                             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image restaurant La palette du goût">
@@ -70,7 +70,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="la-note-enchantee.html">
+                <a href="restaurants/la-note-enchantee.html">
                     <article class="article-cards">
                         <div>
                             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
@@ -86,7 +86,7 @@
                         </div>
                     </article>
                 </a>  
-                <a href="a-la-francaise.html">
+                <a href="restaurants/a-la-francaise.html">
                     <article class="article-cards">
                         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
                         <div class="card-txt">
@@ -99,7 +99,7 @@
                         </div>
                     </article>
                 </a>
-                <a href="le-delice-des-sens.html">
+                <a href="restaurants/le-delice-des-sens.html">
                     <article class="article-cards">
                         <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens">
                         <div class="card-txt">
